<resources>
    <string name="app_name">Sách Của Tui</string>
    <string name="app_id">815113905178231</string>
    <string name="please_wait">Vui lòng chờ trong giây lát</string>
    <string name="loading">Đang lấy thông tin từ máy chủ</string>
    <string name="error_connect">Vui lòng kết nối mạng để tiếp tục</string>
    <string name="error_timeout">Kết nối quá lâu. Vui lòng thử lại</string>
    <string name="error_server">Lỗi từ máy chủ. Vui lòng thử lại sau</string>
    <string name="progress_formatting">Đang định dạng sách</string>
    <string name="progress_loading">Đang định dạng sách</string>
    <string name="notice_exitapp">Bạn có chắc muốn thoát ứng dụng ?</string>
    <string name="about_app">
        * Ứng dụng “Sách Của Tui” có rất nhiều chủ đề sách phong phú: từ sách về kỹ năng mềm, sách giáo dục, sách lịch sử … cho đến các sách tiểu thuyết, kiếm hiệp, tiên hiệp và truyện tranh nổi tiếng. Và quan trọng hơn cả là được cập nhật thường xuyên đủ để đáp ứng những yêu cầu của các bạn.\n
        * Đọc sách không cần kết nối mạng, bạn chỉ cần tải sách về và đọc ở chế độ offline thoải mái mà không cần lo lắng.\n
        * Hiện tại tất cả sách đều được miễn phí và không mang mục đích thương mại.\n
        * Hãy truy cập https://www.facebook.com/SS.SachCuaTui trên Facebook để cập nhật các thông tin.\n
        * Để yêu cầu thêm những sách bạn yêu thích và góp ý về App vui lòng vào http://bit.do/N4q6
    </string>
    <string name="fmmain_newbook">Sách mới</string>
    <string name="fmmain_top">Top 20 sách yêu thích nhất</string>
    <string name="fmmain_mybook">Sách Của Tui</string>
    <string name="mi_search">"Tìm kiếm"</string>
    <string name="mi_exit">"Thoát"</string>
    <string name="mi_goto">"Đi đến"</string>
    <string name="mi_bookmarks">"Đánh dấu"</string>
    <string name="mi_file_open">"Mở tập tin"</string>
    <string name="mi_options">"Tùy chọn "</string>
    <string name="mi_font_size_increase">"Tăng kích thước chữ"</string>
    <string name="mi_font_size_decrease">"Giảm kích thước chữ"</string>
    <string name="mi_font_previous">"Phông chữ trước"</string>
    <string name="mi_font_next">"Phông chữ tiếp theo"</string>
    <string name="progress_please_wait">"Vui lòng chờ..."</string>
    <string name="progress_starting_cool_reader">"Đang khởi chạy ứng dụng"</string>
    <string name="progress_scanning">"Thư mục quét"</string>
    <string name="context_menu_title_bookmark">"Đánh dấu"</string>
    <string name="context_menu_title_book">"Sách"</string>
    <string name="context_menu_title_recent_book">"Cuốn sách gần đây"</string>
    <string name="context_menu_title_folder">"Thư mục"</string>
    <string name="mi_book_open">"Mở cuốn sách"</string>
    <string name="mi_book_recent_books">"Sách gần đây"</string>
    <string name="mi_book_file_remove">"Xóa các tập tin cuốn sách"</string>
    <string name="mi_book_recent_remove">"Xóa khỏi danh sách"</string>
    <string name="mi_book_recent_goto">"Tới thư mục"</string>
    <string name="mi_book_sort_order">"Thứ tự Sắp xếp "</string>
    <string name="mi_book_sort_order_filename">"Theo tên tập tin"</string>
    <string name="mi_book_sort_order_filename_desc">"Theo tên tập tin (giảm dần)"</string>
    <string name="mi_book_sort_order_timestamp">"Bởi dấu thời gian"</string>
    <string name="mi_book_sort_order_timestamp_desc">"Bởi dấu thời gian (giảm dần)"</string>
    <string name="mi_book_sort_order_author">"Của tác giả"</string>
    <string name="mi_book_sort_order_author_desc">"Của tác giả (giảm dần)"</string>
    <string name="mi_book_sort_order_title">"Theo tên"</string>
    <string name="mi_book_sort_order_title_desc">"Theo tiêu đề (giảm dần)"</string>
    <string name="mi_bookmark_set">"Đặt dấu"</string>
    <string name="mi_bookmark_goto">"Đi đánh dấu"</string>
    <string name="mi_goto_page">"Chuyển đến trang #"</string>
    <string name="mi_goto_percent">"Đi đến vị trí %"</string>
    <string name="mi_goto_toc">"Mục lục"</string>
    <string name="mi_folder_open">"Mở thư mục..."</string>
    <string name="mi_folder_to_favorites">"Thêm vào Yêu thích"</string>
    <string name="mi_folder_left">"Di chuyển trái"</string>
    <string name="mi_folder_right">"Chuyển quyền"</string>
    <string name="mi_folder_remove">"Xóa"</string>
    <string name="dir_recent_books">"Sách mới"</string>
    <string name="dir_sd_card">"Thẻ SD"</string>
    <string name="dir_internal_sd_card">"Thẻ SD nội bộ"</string>
    <string name="dir_internal_memory">"Bộ nhớ trong"</string>
    <string name="win_title_bookmarks">"Đánh dấu"</string>
    <string name="win_title_toc">"Mục lục"</string>
    <string name="win_title_options">"Tùy chọn "</string>
    <string name="win_title_search">"Tìm kiếm"</string>
    <string name="win_title_options_apply">"Áp dụng thay đổi?"</string>
    <string name="win_title_screen_orientation_change_apply">"Áp dụng màn hình thay đổi định hướng?"</string>
    <string name="tab_options_styles">"Phong cách"</string>
    <string name="tab_options_page">"Trang"</string>
    <string name="tab_options_app">"Ứng dụng"</string>
    <string name="tab_options_controls">"Điều khiển"</string>
    <string name="tab_options_css">"CSS"</string>
    <string name="options_font_size">"Kích thước"</string>
    <string name="options_font_face">"Mặt chữ"</string>
    <string name="options_font_embolden">"Khuyến khích những phông chữ"</string>
    <string name="options_font_antialias">"Khử răng cưa phông chữ"</string>
    <string name="options_font_antialias_off">"Không antialias"</string>
    <string name="options_font_antialias_on_for_big">"Trên cho các phông chữ lớn"</string>
    <string name="options_font_antialias_on_for_all">"Cho tất cả các phông chữ"</string>
    <string name="options_interline_space">"Không gian nối chuyến"</string>
    <string name="options_inverse_view">"Chế độ ban đêm"</string>
    <string name="options_color_text">"Văn bản màu"</string>
    <string name="options_color_background">"Màu nền"</string>
    <string name="options_color_hue">"Huế"</string>
    <string name="options_color_saturation">"Bão hòa"</string>
    <string name="options_color_brightness">"Độ sáng"</string>
    <string name="options_background_texture">"Kết cấu nền"</string>
    <string name="options_hyphenation_dictionary">"Gạch nối từ điển"</string>
    <string name="options_page_show_titlebar">"Hiển thị thanh tiêu đề"</string>
    <string name="options_page_footnotes">"Chú thích"</string>
    <string name="options_page_orientation">"Định hướng"</string>
    <string name="options_page_orientation_0">"Chân dung"</string>
    <string name="options_page_orientation_90">"Phong cảnh"</string>
    <string name="options_page_orientation_180">"Chân dung (180)"</string>
    <string name="options_page_orientation_270">"Cảnh quan (270)"</string>
    <string name="options_page_orientation_sensor">"Cảm biến"</string>
    <string name="options_page_landscape_pages">"Trang cảnh quan"</string>
    <string name="options_page_landscape_pages_one">"Một trang"</string>
    <string name="options_page_landscape_pages_two">"Hai trang"</string>
    <string name="options_page_margin_left">"Lề trái"</string>
    <string name="options_page_margin_right">"Lề phải"</string>
    <string name="options_page_margin_top">"Lề trên"</string>
    <string name="options_page_margin_bottom">"Lề dưới"</string>
    <string name="options_view_mode">"Chế độ xem"</string>
    <string name="options_view_mode_pages">"Trang"</string>
    <string name="options_view_mode_scroll">"Di chuyển"</string>
    <string name="options_app_fullscreen">"Chế độ toàn màn hình"</string>
    <string name="options_app_show_cover_pages">"Trang bìa trong trình duyệt"</string>
    <string name="options_value_on">"Bật"</string>
    <string name="options_value_off">"Tắt"</string>
    <string name="dlg_search_case_sensitive">"Trường hợp nhạy cảm"</string>
    <string name="dlg_search_reverse">"Ngược lại"</string>
    <string name="dlg_search_hint">"Gõ văn bản ở đây"</string>
    <string name="dlg_button_ok">"OK"</string>
    <string name="dlg_button_cancel">"Hủy bỏ"</string>
    <string name="dlg_button_find">"Tìm"</string>
    <string name="options_page_animation">"Trang hoạt hình"</string>
    <string name="options_controls_enable_volume_keys">"Sử dụng phím âm lượng để điều hướng"</string>
    <string name="options_app_backlight_screen">"Màn hình độ sáng đèn nền"</string>
    <string name="options_app_backlight_screen_default">"Mặc định"</string>
    <string name="options_app_tapzones_normal">"Hành động khu vực vòi nước"</string>
    <string name="options_app_key_actions">"Hoạt động chính"</string>
    <string name="options_app_trackball_disable">"Vô hiệu hóa trackball"</string>
    <string name="dir_sd_card_2">"Thẻ SD 2"</string>
    <string name="mi_book_back_to_reading">"Sổ sách hiện tại"</string>
    <string name="mi_book_root">"Rễ"</string>
    <string name="action_none">"(Không có hành động)"</string>
    <string name="action_pagedown">"Trang tiếp theo"</string>
    <string name="action_pageup">"Trang trước"</string>
    <string name="action_search">"Tìm kiếm"</string>
    <string name="action_recent_books_list">"Sách gần đây"</string>
    <string name="action_exit">"Thoát"</string>
    <string name="action_pageup_10">"Lại 10 trang"</string>
    <string name="action_bookmarks">"Đánh dấu"</string>
    <string name="action_pagedown_10">"Chuyển tiếp 10 trang"</string>
    <string name="action_toc">"Mục lục"</string>
    <string name="action_go_percent">"Tới phần trăm"</string>
    <string name="action_go_page">"Tới trang"</string>
    <string name="action_go_first_page">"Trang đầu tiên"</string>
    <string name="action_go_last_page">"Trang cuối"</string>
    <string name="action_file_browser">"Mở tập tin"</string>
    <string name="action_options">"Tùy chọn "</string>
    <string name="action_toggle_day_night">"Ngày / đêm"</string>
    <string name="action_reader_menu">"Đọc đơn"</string>
    <string name="options_app_tap_action_short">"Hành động máy"</string>
    <string name="options_app_tap_action_long">"Hành động vòi dài"</string>
    <string name="action_touch_screen_toggle_lock">"Khóa / mở khóa màn hình cảm ứng"</string>
    <string name="action_touch_screen_disabled_toast">"Màn hình cảm ứng bị khóa"</string>
    <string name="action_touch_screen_enabled_toast">"Màn hình cảm ứng được mở khóa"</string>
    <string name="action_repeat">"(Autorepeat)"</string>
    <string name="options_app_scan_book_props">"Tính quét của tất cả các cuốn sách trong thư mục"</string>
    <string name="options_page_titlebar">"Tùy chọn thanh tiêu đề"</string>
    <string name="options_page_show_titlebar_chapter_marks">"Chương ràng buộc dấu"</string>
    <string name="options_page_show_titlebar_battery_percent">"Sạc pin như phần trăm"</string>
    <string name="options_page_titlebar_font_size">"Kích thước phông chữ"</string>
    <string name="options_page_titlebar_font_face">"Mặt chữ"</string>
    <string name="options_page_titlebar_font_color">"màu Font chữ"</string>
    <string name="options_page_show_titlebar_title">"Hiện tiêu đề cuốn sách"</string>
    <string name="mi_bookmark_add">"Thêm"</string>
    <string name="mi_bookmark_delete">"Xóa"</string>
    <string name="mi_bookmark_edit">"Sửa"</string>
    <string name="mi_bookmark_export">"Xuất dấu trang"</string>
    <string name="dlg_book_search_title">"Tiêu đề"</string>
    <string name="dlg_book_search_series">"Tùng thư"</string>
    <string name="dlg_book_search_filename">"Tên tập tin"</string>
    <string name="dlg_book_search_author">"Tác giả"</string>
    <string name="dlg_book_search_prompt">"Nhập mô hình tìm kiếm:"</string>
    <string name="mi_book_browser_simple_mode">"Danh sách tập tin đơn giản"</string>
    <string name="mi_book_opds_root">"Danh mục sản phẩm trực tuyến"</string>
    <string name="mi_catalog_add">"Danh mục mới"</string>
    <string name="mi_bookmark_send">"Gửi"</string>
</resources>