<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/book_open"
        android:title="@string/mi_book_open"
        android:titleCondensed="@string/mi_book_open"></item>
    <item
        android:id="@+id/book_delete"
        android:title="@string/mi_book_file_remove"
        android:titleCondensed="@string/mi_book_file_remove"></item>
    <item
        android:id="@+id/book_recent_books"
        android:title="@string/mi_book_recent_books"
        android:titleCondensed="@string/mi_book_recent_books"></item>
    <item
        android:id="@+id/book_opds_root"
        android:title="@string/mi_book_opds_root"
        android:titleCondensed="@string/mi_book_opds_root"></item>
    <item
        android:id="@+id/book_root"
        android:title="@string/mi_book_root"
        android:titleCondensed="@string/mi_book_root"></item>
    <item
        android:id="@+id/book_sort_order"
        android:title="@string/mi_book_sort_order"
        android:titleCondensed="@string/mi_book_sort_order"></item>
</menu>
