<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cr3_mi_goto"
        android:icon="@drawable/ic_menu_goto"
        android:numericShortcut="1"
        android:orderInCategory="2"
        android:title="@string/mi_goto"
        android:titleCondensed="@string/mi_goto">
        <menu>
            <item
                android:id="@+id/book_root"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/mi_book_root"
                android:titleCondensed="@null"></item>
            <item
                android:id="@+id/book_recent_books"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/mi_book_recent_books"
                android:titleCondensed="@null"></item>
            <item
                android:id="@+id/book_opds_root"
                android:title="@string/mi_book_opds_root"
                android:titleCondensed="@string/mi_book_opds_root"></item>
        </menu>
    </item>
    <item
        android:id="@+id/book_back_to_reading"
        android:icon="@android:drawable/ic_menu_view"
        android:numericShortcut="2"
        android:title="@string/mi_book_back_to_reading"
        android:titleCondensed="@null"></item>
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:numericShortcut="3"
        android:orderInCategory="3"
        android:title="@string/mi_options"
        android:titleCondensed="@string/mi_options">
        <menu>
            <item
                android:id="@+id/book_sort_order"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/mi_book_sort_order"
                android:titleCondensed="@null"></item>
            <item
                android:id="@+id/book_toggle_simple_mode"
                android:icon="@drawable/ic_menu_star"
                android:title="@string/mi_book_browser_simple_mode"
                android:titleCondensed="@null"></item>
        </menu>
    </item>
    <item
        android:id="@+id/catalog_add"
        android:icon="@android:drawable/ic_menu_add"
        android:numericShortcut="4"
        android:orderInCategory="4"
        android:title="@string/mi_catalog_add"
        android:titleCondensed="@string/mi_catalog_add"></item>
    <item
        android:id="@+id/cr3_mi_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:numericShortcut="5"
        android:orderInCategory="5"
        android:title="@string/mi_exit"
        android:titleCondensed="@null"></item>
</menu>
