<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/search_status"
        style="@style/Holo.TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlg_book_search_prompt"
        />

    <TableRow>

        <TextView
            style="@style/Holo.TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/dlg_book_search_filename"
            />

        <EditText
            android:id="@+id/search_text_filename"
            style="@style/TextAppearance.Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/dlg_search_hint"
            android:singleLine="true"
            android:text=""
            />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Holo.TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/dlg_book_search_author"
            />

        <EditText
            android:id="@+id/search_text_author"
            style="@style/TextAppearance.Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/dlg_search_hint"
            android:singleLine="true"
            android:text=""
            />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Holo.TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/dlg_book_search_title"
            />

        <EditText
            android:id="@+id/search_text_title"
            style="@style/TextAppearance.Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/dlg_search_hint"
            android:singleLine="true"
            android:text=""
            />
    </TableRow>

    <TableRow>

        <TextView
            style="@style/Holo.TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:text="@string/dlg_book_search_series"
            />

        <EditText
            android:id="@+id/search_text_series"
            style="@style/TextAppearance.Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:hint="@string/dlg_search_hint"
            android:singleLine="true"
            android:text=""
            />
    </TableRow>
</TableLayout>
